# sep-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: scrape_all.py
sep_scraper/: __init__.py  assembler.py  cli.py  fetcher.py  metadata.py  parser.py
sep_scraper/converters/: __init__.py  bibliography.py  footnotes.py  math.py  tables.py  text.py
tests/: __init__.py  test_assembler.py  test_cli.py  test_fetcher.py  test_integration.py  test_metadata.py  test_parser.py
tests/fixtures/: sample_article.html  sample_footnotes.html  sample_preamble.html
tests/test_converters/: test_bibliography.py  test_footnotes.py  test_math.py  test_tables.py  test_text.py
