[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sep-scraper"
version = "0.1.0"
description = "Convert Stanford Encyclopedia of Philosophy articles to markdown"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sep-scraper = "sep_scraper.cli:main"
